<resources>
    <string name="app_name">Podrži Život</string>
    <string name="app_bar_text"> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Fondation message hello</string>
    <string name="no_network_connections">Nema internet konekcije.Proverite wifi ili prenos podataka na vašem telefonu.</string>
    <string name="pomozimo_deci">Pomozimo deci</string>
    <string name="aktuelnosti">Aktuelnosti</string>
    <string name="pomogli_smo">Pomogli smo</string>
    <string name="donatori">Donatori</string>
    <string name="ambasadori">Ambasadori</string>
    <string name="send_message">Pošalji poruku</string>
    <string name="hint_message">Cena poruke je 100 dinara</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="Youtube">YouTube</string>
    <string name="o_nama">O nama</string>
    <string name="kontakt">Kontakt</string>
    <string name="ciljevi">Ciljevi</string>
    <string name="cilj_text">Zdrava, srećna i bezbrižna deca su naš jedini cilj. Ostvarićemo ga kroz unapređenje socijalne i zdravstvene zaštite dece u Srbiji, sprovodeći različite humanitarne aktivnosti. Podrška oboleloj deci i njihovim porodicama u cilju lečenja, medicinskog zbrinjavanja i oporavka, promovisanje i unapređenje sistema dečije zdravstvene zaštite u Srbiji, je osnovni cilj naše fondacije. Budućnost i životne mogućnosti dece u Srbiji, koja nisu odredjena siromaštvom, teškim bolestima, načinom na koji žive, lokacijom, nacionalnošću i veroispovesti, naš je siguran put u zdravo i uspešno društvo. Mi imamo cilj i na kraju prihvatamo samo jednu nagradu – osmeh i radost na licima onih kojima smo potrebni. Taj osmeh i ta radost nemaju cenu i njihovu vrednost znaju samo oni koji su pomažući drugima, postali ponosni vlasnici mnogo osmeha.</string>
    <string name="osnivaci">Osnivači</string>
    <string name="sergej_trifunovi">Sergej Trifunović</string>
    <string name="verica_egan">Verica Šegan</string>
    <string name="upravni_odbor">Upravni odbor</string>
    <string name="uo_1">Sergej Trifunović – predsednik UO (glumac)</string>
    <string name="uo_2">Svetislav Basara (književnik)</string>
    <string name="uo_3">Dragan Jaćimović (alpinista)</string>
    <string name="uo_4">Žarko Paspalj (košarkaš)</string>
    <string name="uo_5">Prof. dr Radoslav Božović (sociolog)</string>
    <string name="uputstvo_eur">Uputstvo za uplatu iz inostranstva (EUR)</string>
    <string name="uputstvo_usd">Uputstvo za uplatu iz inostranstva (USD)</string>
    <string name="lokacija_fondacije">Lokacija fondacije</string>
    <string name="_060_5757_783">060/5757&#8211;783</string>
    <string name="katarina_danojlic_podrzizivot_com">katarina.danojlic@podrzizivot.com</string>
    <string name="project_manager">Project manager</string>
    <string name="katarina_danojli">Katarina Danojlić</string>
    <string name="_060_5757_784">060/5757&#8211;784</string>
    <string name="sekretar_podrzizivot_com">sekretar@podrzizivot.com</string>
    <string name="upravitelj_fondacije">Upravitelj fondacije</string>
    <string name="ratomir_antonovi">Ratomir Antonović</string>
    <string name="web_www_podrzizivot_com">Web: www.podrzizivot.com</string>
    <string name="e_mail_kontakt_podrzizivot_com">E-mail: kontakt@podrzizivot.com</string>
    <string name="telefon_011_4089_785">Telefon: 011/4089&#8211;785</string>
    <string name="radno_vreme_09h_do_17h">Radno vreme: 09h do 17h</string>
    <string name="adresa_mitropolita_petra_15_11000_beograd">Adresa: Mitropolita Petra 15, 11000 Beograd</string>
    <string name="fondacija_podr_i_ivot">FONDACIJA PODRŽI ŽIVOT</string>
    <string name="po_aljite_e_mail">Pošaljite E-mail</string>
    <string name="slika_dece">Slika dece</string>
    <string name="dialog_image">Dialog image</string>
    <string name="dialog_back">dialog_back</string>
    <string name="image_no_net">image_no_net</string>
    <string name="friends_image">friends_image</string>
    <string name="unesite_barem_jedan_karakter">Unesite barem jedan karakter</string>
    <string name="dialog_message">dialog_message</string>
    <string name="image_kids">image_kids</string>
    <string name="spisak_uplata">Spisak uplata</string>
    <string name="potrebna_vam_je_pomo">Potrebna Vam je pomoć</string>
    <string name="postani_volonter">Postani volonter</string>
    <string name="uplatili_ste_do_sada">Uplatili ste do sada:</string>
</resources>
