<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_facebook"
        android:icon="@drawable/facebook"
        android:orderInCategory="100"
        android:title="@string/facebook"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/twitter"
        android:orderInCategory="103"
        android:title="@string/twitter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_instagram"
        android:icon="@drawable/instagram"
        android:orderInCategory="101"
        android:title="@string/Instagram"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_youtube"
        android:icon="@drawable/youtube"
        android:orderInCategory="102"
        android:title="@string/Youtube"
        app:showAsAction="never" />
</menu>
