<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.podrzizivot.project.fragments.FondationOverallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:gravity="center_horizontal"
            android:text="@string/ciljevi"
            android:textAllCaps="true"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ciljevi_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/cilj_text"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/osnivaci"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/sergej_trifunovi"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal"
            android:text="@string/verica_egan"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/upravni_odbor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/uo_1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/uo_2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/uo_3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center_horizontal"
            android:text="@string/uo_4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal"
            android:text="@string/uo_5"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/doc_eur"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="6dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/uputstvo_eur"
                android:src="@drawable/ic_description_eur_24dp" />

            <ImageButton
                android:id="@+id/doc_usd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="6dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/uputstvo_usd"
                android:src="@drawable/ic_description_eur_24dp" />

            <ImageButton
                android:id="@+id/maps_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="6dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/lokacija_fondacije"
                android:src="@drawable/ic_navigation_black_24dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:gravity="center_horizontal"
                android:text="@string/uputstvo_eur" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:gravity="center_horizontal"
                android:text="@string/uputstvo_usd" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:gravity="center_horizontal"
                android:text="@string/lokacija_fondacije" />


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
