<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_back_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:contentDescription="@string/dialog_message"
            android:scaleType="fitStart"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/unesite_barem_jedan_karakter"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/textMessage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_message"
            android:gravity="top"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/hint_message"
            android:padding="4dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/sendSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/send_message" />

    </LinearLayout>
</ScrollView>